test_cases/pass/p07.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
FOR (x=1, x < 100, x=x*2)
START FOR
    PRINT: x & " "
END FOR
END SCRIPT
