test_cases/fail/f03.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
DECLARE INT y
END SCRIPT
